--- a/ChangeLog
+++ b/ChangeLog
@@ -148,6 +148,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * opcja wy¶lij sms w menu g³ównym przesuniêta wy¿ej, po otwarciu ni± okna
   wysy³anie sms domy¶lnie aktywne jest pole "odbiorca" (adrian)
 * ³ata Vogela: powiadomienia o statusach + trochê moich zmian (joi)
+* przywrócona mo¿liwo¶æ wyboru portu przez który kadu ma sie ³±czyæ z
+  serwerami (michal)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
