--- a/ChangeLog
+++ b/ChangeLog
@@ -151,6 +151,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * przywrócona mo¿liwo¶æ wyboru portu przez który kadu ma sie ³±czyæ z
   serwerami (michal)
 * zmiana zestawu ikon nie wymaga restartowania ca³ego programu + nowe ikonki (joi)
+* poprawne zamykanie po otrzymaniu sygna³u SIGTERM lub SIGINT (joi)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
