--- a/ChangeLog
+++ b/ChangeLog
@@ -153,6 +153,10 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * zmiana zestawu ikon nie wymaga restartowania ca³ego programu + nowe ikonki (joi)
 * poprawne zamykanie po otrzymaniu sygna³u SIGTERM lub SIGINT (joi)
 * przy starcie x11_docking w trayu ikonka nie pokazuje siê dwukrotnie (joi)
+* usuniêcie staarego kodu, który mia³ zabezpieczaæ przed ujawnianiem naszego "ukrycia",
+  a przy statusie "niewidoczny z opisem" robi³ co¶ dok³adnie odwrotnego...
+  przy przechodzeniu z "niedostêpny z opisem" na "niewidoczny z opisem"
+  nie pojawiaj± siê 2 informacje o zmianie statusu (joi)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
