--- a/ChangeLog
+++ b/ChangeLog
@@ -157,6 +157,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   a przy statusie "niewidoczny z opisem" robi³ co¶ dok³adnie odwrotnego...
   przy przechodzeniu z "niedostêpny z opisem" na "niewidoczny z opisem"
   nie pojawiaj± siê 2 informacje o zmianie statusu (joi)
+* poprawione powiadamianie o statusach przy po³±czeniu + od¶wie¿anie UserBoksa
+  dopiero po odebraniu od serwera ca³ej listy kontaktów (joi)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
