--- a/ChangeLog
+++ b/ChangeLog
@@ -159,6 +159,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   nie pojawiaj± siê 2 informacje o zmianie statusu (joi)
 * poprawione powiadamianie o statusach przy po³±czeniu + od¶wie¿anie UserBoksa
   dopiero po odebraniu od serwera ca³ej listy kontaktów (joi)
+* dodana domy¶lna ¶cie¿ka odtwarzacza w ext_sound
+  je¿eli ¶cie¿ka nie jest ustawiona, to nie próbujemy w ogóle odpalaæ czegokolwiek (joi)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
