--- a/ChangeLog
+++ b/ChangeLog
@@ -160,7 +160,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * poprawione powiadamianie o statusach przy po³±czeniu + od¶wie¿anie UserBoksa
   dopiero po odebraniu od serwera ca³ej listy kontaktów (joi)
 * dodana domy¶lna ¶cie¿ka odtwarzacza w ext_sound
-  je¿eli ¶cie¿ka nie jest ustawiona, to nie próbujemy w ogóle odpalaæ czegokolwiek (joi)
+  je¿eli ¶cie¿ka nie jest ustawiona, to nie próbujemy w ogóle odpalaæ czegokolwiek
+  d¼wiêki domy¶lnie w³±czone, poprawione domy¶lne wielko¶ci okien (joi)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
