--- a/ChangeLog
+++ b/ChangeLog
@@ -162,6 +162,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * dodana domy¶lna ¶cie¿ka odtwarzacza w ext_sound
   je¿eli ¶cie¿ka nie jest ustawiona, to nie próbujemy w ogóle odpalaæ czegokolwiek
   d¼wiêki domy¶lnie w³±czone, poprawione domy¶lne wielko¶ci okien (joi)
+* dodany modu³ weather do autodownloadu (joi)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
