--- a/ChangeLog
+++ b/ChangeLog
@@ -163,6 +163,9 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   je¿eli ¶cie¿ka nie jest ustawiona, to nie próbujemy w ogóle odpalaæ czegokolwiek
   d¼wiêki domy¶lnie w³±czone, poprawione domy¶lne wielko¶ci okien (joi)
 * dodany modu³ weather do autodownloadu (joi)
+* modu³y dynamiczne z ustawion± opcj± LoadByDefault w pliku desc ³aduj± siê
+  domy¶lnie dopóki ich sami nie wy³adujemy w menad¿erze modu³ów. modu³y
+  x11_docking, ext_sound i autoaway domy¶lne, ale dynamiczne (adrian)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
