--- a/ChangeLog
+++ b/ChangeLog
@@ -166,6 +166,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * modu³y dynamiczne z ustawion± opcj± LoadByDefault w pliku desc ³aduj± siê
   domy¶lnie dopóki ich sami nie wy³adujemy w menad¿erze modu³ów. modu³y
   x11_docking, ext_sound i autoaway domy¶lne, ale dynamiczne (adrian)
+* tylko docking, sound i notify pozostaj± na sta³e, reszta dynamicznie,
+  ale domy¶lnie ³aduj± siê (joi)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
