--- a/ChangeLog
+++ b/ChangeLog
@@ -168,6 +168,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   x11_docking, ext_sound i autoaway domy¶lne, ale dynamiczne (adrian)
 * tylko docking, sound i notify pozostaj± na sta³e, reszta dynamicznie,
   ale domy¶lnie ³aduj± siê (joi)
+* tradycyjnie ju¿ patch porz±dkuj±cy vogela... tym razem likwiduje on zmienne
+  publiczne z klasy UserListElement i udostêpnia odpowiednie funkcje (adrian)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
