--- a/ChangeLog
+++ b/ChangeLog
@@ -171,6 +171,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * tradycyjnie ju¿ patch porz±dkuj±cy vogela... tym razem likwiduje on zmienne
   publiczne z klasy UserListElement i udostêpnia odpowiednie funkcje (adrian)
 * ostatni chyba w tej wersji patch porz±dkuj±cy vogela - nazwy dns (adrian)
+* poprawka vogela poprawek vogela ;) (adrian)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
