--- a/ChangeLog
+++ b/ChangeLog
@@ -172,6 +172,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   publiczne z klasy UserListElement i udostêpnia odpowiednie funkcje (adrian)
 * ostatni chyba w tej wersji patch porz±dkuj±cy vogela - nazwy dns (adrian)
 * poprawka vogela poprawek vogela ;) (adrian)
+* ======= FEATURE FREEZE =======
+  je¶li kto¶ ma jakie¶ uwagi co do api, to niech szybko zg³asza (adrian)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
