--- a/ChangeLog
+++ b/ChangeLog
@@ -174,6 +174,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * poprawka vogela poprawek vogela ;) (adrian)
 * ======= FEATURE FREEZE =======
   je¶li kto¶ ma jakie¶ uwagi co do api, to niech szybko zg³asza (adrian)
+* Dodano modu³ kreatora konfiguracji autorstwa Dorregaray (Ron_K)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
