--- a/ChangeLog
+++ b/ChangeLog
@@ -176,6 +176,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   je¶li kto¶ ma jakie¶ uwagi co do api, to niech szybko zg³asza (adrian)
 * Dodano modu³ kreatora konfiguracji autorstwa Dorregaray (Ron_K)
 * klasa Status przemianowana na UserStatus ze wzglêdu na konflikt nazw (joi)
+* dostosowanie autorespondera do której¶ z ostatnich zmian Vogela (joi)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
