--- a/ChangeLog
+++ b/ChangeLog
@@ -177,6 +177,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * Dodano modu³ kreatora konfiguracji autorstwa Dorregaray (Ron_K)
 * klasa Status przemianowana na UserStatus ze wzglêdu na konflikt nazw (joi)
 * dostosowanie autorespondera do której¶ z ostatnich zmian Vogela (joi)
+* z powodu ci±g³ych problemów z pobieraniem modu³ów autodownload obs³uguje
+  mirrory: w pliku .web mo¿emy podawaæ kilka adresów w kolejnych wierszach (adrian)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
