--- a/ChangeLog
+++ b/ChangeLog
@@ -179,6 +179,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * dostosowanie autorespondera do której¶ z ostatnich zmian Vogela (joi)
 * z powodu ci±g³ych problemów z pobieraniem modu³ów autodownload obs³uguje
   mirrory: w pliku .web mo¿emy podawaæ kilka adresów w kolejnych wierszach (adrian)
+* poprawione segfaulty vogela zwi±zane z importem listy kontaktów (chilek)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
