--- a/ChangeLog
+++ b/ChangeLog
@@ -180,6 +180,9 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * z powodu ci±g³ych problemów z pobieraniem modu³ów autodownload obs³uguje
   mirrory: w pliku .web mo¿emy podawaæ kilka adresów w kolejnych wierszach (adrian)
 * poprawione segfaulty vogela zwi±zane z importem listy kontaktów (chilek)
+* w konstruktorze UserListElement::UserListElement(const UserListElement &copyMe)
+  zamazywano Stat przez *this = CopyMe; powodowa³o to conajmniej kilka ró¿nych zwa³ek
+  w ró¿nych nieoczekiwanych momentach (chilek)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
