--- a/ChangeLog
+++ b/ChangeLog
@@ -181,6 +181,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   mirrory: w pliku .web mo¿emy podawaæ kilka adresów w kolejnych wierszach (adrian)
 * poprawione segfaulty vogela zwi±zane z importem listy kontaktów (chilek)
 * przywrócone sprawdzanie najnowszej wersji Kadu (joi)
+* ======= API FREEZE =======
+  teraz je dokumentujemy i oczywi¶cie szukamy b³êdów w nowym kadu (adrian)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
