--- a/ChangeLog
+++ b/ChangeLog
@@ -183,6 +183,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * przywrócone sprawdzanie najnowszej wersji Kadu (joi)
 * ======= API FREEZE =======
   teraz je dokumentujemy i oczywi¶cie szukamy b³êdów w nowym kadu (adrian)
+* Path Dorr-a na Config_wizard (Ron_K)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
