--- a/ChangeLog
+++ b/ChangeLog
@@ -174,7 +174,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * poprawka vogela poprawek vogela ;) (adrian)
 * ======= FEATURE FREEZE =======
   je¶li kto¶ ma jakie¶ uwagi co do api, to niech szybko zg³asza (adrian)
-* Dodano modu³ kreatora konfiguracji autorstwa Dorregaray (Ron_K)
+* dodano modu³ kreatora konfiguracji autorstwa Dorregaray (Ron_K)
 * klasa Status przemianowana na UserStatus ze wzglêdu na konflikt nazw (joi)
 * dostosowanie autorespondera do której¶ z ostatnich zmian Vogela (joi)
 * z powodu ci±g³ych problemów z pobieraniem modu³ów autodownload obs³uguje
@@ -183,7 +183,11 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * przywrócone sprawdzanie najnowszej wersji Kadu (joi)
 * ======= API FREEZE =======
   teraz je dokumentujemy i oczywi¶cie szukamy b³êdów w nowym kadu (adrian)
-* Path Dorr-a na Config_wizard (Ron_K)
+* patch Dorr-a na Config_wizard (Ron_K)
+* focus w oknie Chat przekazywany jest do pola edycji (joi)
+* dymki z opisem sk³adni pojawiaj± siê w konfiguracji nad polami w hintach i speech (joi)
+* eskejpowanie znaków specjalnych w nickach przy wy¶wietlaniu dymków (joi)
+* poprawne otwieranie linków zawieraj±cych spacje (joi)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
