--- a/ChangeLog
+++ b/ChangeLog
@@ -191,6 +191,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * "przytrzymywanie" stanu bocznego suwaka w zarz±dcy modu³ów przy
   ³adowaniu / wy³adowywaniu (joi)
 * ³ata Vogela usuwaj±ca segfault przy braku po³±czenia z serwerem (joi)
+* gdy w nicku wystêpuje ',', to w oknie historii wpisy nie ³±cz± siê pod jedn± dat± (joi)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
