--- a/ChangeLog
+++ b/ChangeLog
@@ -193,6 +193,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * ³ata Vogela usuwaj±ca segfault przy braku po³±czenia z serwerem (joi)
 * gdy w nicku wystêpuje ',', to w oknie historii wpisy nie ³±cz± siê pod jedn± dat± (joi)
 * poprawki w UserList dotycz±ce ma³ych/du¿ych liter i dokumentowanie (adrian)
+* powiadamianie o nowej rozmowie przy w³±czonej opcji "Nowa wiadomo¶æ otwiera
+  okno rozmowy" znowu dzia³a (NKG/joi)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
