--- a/ChangeLog
+++ b/ChangeLog
@@ -197,6 +197,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   okno rozmowy" znowu dzia³a (NKG/joi)
 * obej¶cie problemów z otwieraniem linków ze spacjami w operze
   + poprawne t³umaczenie pliterek w linkach (joi)
+* pod gnome przy w³±czonej opcji "Miganie paska tytu³owego" nie zmienia siê
+  szeroko¶æ paska zadañ (joi)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
