--- a/ChangeLog
+++ b/ChangeLog
@@ -199,6 +199,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   + poprawne t³umaczenie pliterek w linkach (joi)
 * pod gnome przy w³±czonej opcji "Miganie paska tytu³owego" nie zmienia siê
   szeroko¶æ paska zadañ (joi)
+* usuwanie htmla (który jest dodawany prze encryption) z tego co czyta modu³ speech (joi)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
