--- a/ChangeLog
+++ b/ChangeLog
@@ -200,6 +200,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * pod gnome przy w³±czonej opcji "Miganie paska tytu³owego" nie zmienia siê
   szeroko¶æ paska zadañ (joi)
 * usuwanie htmla (który jest dodawany prze encryption) z tego co czyta modu³ speech (joi)
+* ³atka joi'a, umo¿liwiaj±ca przerwanie configure podczas przetwarzania
+  plików spec modu³ów (adrian)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
