--- a/ChangeLog
+++ b/ChangeLog
@@ -202,6 +202,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * usuwanie htmla (który jest dodawany prze encryption) z tego co czyta modu³ speech (joi)
 * ³atka joi'a, umo¿liwiaj±ca przerwanie configure podczas przetwarzania
   plików spec modu³ów (adrian)
+* obrazki w oknie rozmowy ju¿ nie zmieniaj± siê znowu w klepsydrê po
+  przyj¶ciu nowej wiadomo¶ci (adrian)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
