--- a/ChangeLog
+++ b/ChangeLog
@@ -207,6 +207,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * w autodownloadzie dodany limit czasu dla pobrañ modu³ów (joi)
 * configure i spece modu³ów: poprawione wykrywanie dodatkowych narzêdzi,
   dodane ¶cie¿ki dla qt (joi)
+* usuniêty segfault przy imporcie listy kontaktów (joi)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
