--- a/ChangeLog
+++ b/ChangeLog
@@ -208,6 +208,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * configure i spece modu³ów: poprawione wykrywanie dodatkowych narzêdzi,
   dodane ¶cie¿ki dla qt (joi)
 * usuniêty segfault przy imporcie listy kontaktów (joi)
+* patch dokumentuj±cy klasê GaduProtocol vogela + drobna poprawka
+  od¶wie¿ania userboxa (adrian)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
