--- a/ChangeLog
+++ b/ChangeLog
@@ -210,6 +210,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * usuniêty segfault przy imporcie listy kontaktów (joi)
 * patch dokumentuj±cy klasê GaduProtocol vogela + drobna poprawka
   od¶wie¿ania userboxa (adrian)
+* ³atka pinkworma na klasê UinsList (joi)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
