--- a/ChangeLog
+++ b/ChangeLog
@@ -211,6 +211,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * patch dokumentuj±cy klasê GaduProtocol vogela + drobna poprawka
   od¶wie¿ania userboxa (adrian)
 * ³atka pinkworma na klasê UinsList (joi)
+* przy wy³±czaniu zak³adek grup zmieniamy aktualn± grupê na "Wszyscy" (joi)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
