--- a/ChangeLog
+++ b/ChangeLog
@@ -212,6 +212,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   od¶wie¿ania userboxa (adrian)
 * ³atka pinkworma na klasê UinsList (joi)
 * przy wy³±czaniu zak³adek grup zmieniamy aktualn± grupê na "Wszyscy" (joi)
+* poprawione pozycjonowanie anim. emot. przy w³. opcji "paragrafy" (adrian)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
