--- a/ChangeLog
+++ b/ChangeLog
@@ -213,6 +213,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * ³atka pinkworma na klasê UinsList (joi)
 * przy wy³±czaniu zak³adek grup zmieniamy aktualn± grupê na "Wszyscy" (joi)
 * poprawione pozycjonowanie anim. emot. przy w³. opcji "paragrafy" (adrian)
+* animowane obrazki w chacie (joi)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
