--- a/ChangeLog
+++ b/ChangeLog
@@ -214,6 +214,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * przy wy³±czaniu zak³adek grup zmieniamy aktualn± grupê na "Wszyscy" (joi)
 * poprawione pozycjonowanie anim. emot. przy w³. opcji "paragrafy" (adrian)
 * animowane obrazki w chacie (joi)
+* poprawione kopiowanie tekstu z okna rozmowy przy w³±czonych paragrafach (joi)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
