--- a/ChangeLog
+++ b/ChangeLog
@@ -215,6 +215,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * poprawione pozycjonowanie anim. emot. przy w³. opcji "paragrafy" (adrian)
 * animowane obrazki w chacie (joi)
 * poprawione kopiowanie tekstu z okna rozmowy przy w³±czonych paragrafach (joi)
+* animowane emotikony/obrazki s± usuwane z pamiêci po zamkniêciu okna chatu (joi)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
