--- a/AUTHORS
+++ b/AUTHORS
@@ -38,3 +38,4 @@ programista
 Adrian Smarzewski, Roman Krzystyniak - wersja polska
 Robert Kolatzek, Piotr Simon - wersja niemiecka
 Piotr Jedrysik - wersja w³oska
+Miroslaw Jerzewski - wersja francuska
