--- a/ChangeLog
+++ b/ChangeLog
@@ -388,6 +388,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * test kodowania/dekodowania gsm w module rozmów g³osowych (adrian)
 * mo¿liwo¶æ w³±czenia trybu odtwarzania próbek zapewniaj±cego bardziej
   "p³ynne" ich ³±czenie - metoda setFlushingEnabled() (adrian)
+* Dodano wersje francuska atorstwa Miroslawa Jerzewskiego
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
