--- a/ChangeLog
+++ b/ChangeLog
@@ -391,6 +391,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * dodano wersjê francusk± autorstwa Miros³awa Jerzewskiego
 * ³atka Dorregaraya dotycz±ca przemieszczania ikonki w desktop_docking (adrian)
 * libgadu: poprawki w obs³udze proxy (pobrane z cvsu libgadu) (joi)
+* encryption: uniemo¿liwienie wys³ania klucza do samego siebie poprzez
+  menu kontekstowe nad list± kontaktów (joi)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
