--- a/ChangeLog
+++ b/ChangeLog
@@ -398,6 +398,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * Patch Dorr-a na segfault w desktop_docking (Ron_K)
 * kolejna ³atka Dorregaraya dotycz±ca modu³u config_wizard (adrian)
 * pole "Has³o" w konfiguracji proxy jest wygwiazdkowane (joi)
+* w konfiguracji proxy mo¿na podaæ nazwê hosta, a nie tylko IP (joi)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
