--- a/ChangeLog
+++ b/ChangeLog
@@ -399,6 +399,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * kolejna ³atka Dorregaraya dotycz±ca modu³u config_wizard (adrian)
 * pole "Has³o" w konfiguracji proxy jest wygwiazdkowane (joi)
 * w konfiguracji proxy mo¿na podaæ nazwê hosta, a nie tylko IP (joi)
+* poprawiony segfault w te¶cie nagrywania d¼wiêku (joi)
+* przepisany od zera modu³ arts_sound (joi)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
