--- a/ChangeLog
+++ b/ChangeLog
@@ -400,7 +400,9 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * pole "Has³o" w konfiguracji proxy jest wygwiazdkowane (joi)
 * w konfiguracji proxy mo¿na podaæ nazwê hosta, a nie tylko IP (joi)
 * poprawiony segfault w te¶cie nagrywania d¼wiêku (joi)
-* przepisany od zera modu³ arts_sound (joi)
+* przepisany od zera modu³ arts_sound (jest niewra¿liwy na pady
+  wewn±trz artsa oraz obs³uguje nagrywanie) (joi)
+* obs³uga nagrywania d¼wiêku w esd_sound (joi)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
