--- a/ChangeLog
+++ b/ChangeLog
@@ -403,6 +403,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * przepisany od zera modu³ arts_sound (jest niewra¿liwy na pady
   wewn±trz artsa oraz obs³uguje nagrywanie) (joi)
 * obs³uga nagrywania d¼wiêku w esd_sound (joi)
+* przy dodawaniu nowego kontaktu lista nie zawsze siê od¶wie¿a³a - poprawione (joi)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
