--- a/ChangeLog
+++ b/ChangeLog
@@ -405,6 +405,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * obs³uga nagrywania d¼wiêku w esd_sound (joi)
 * przy dodawaniu nowego kontaktu lista nie zawsze siê od¶wie¿a³a - poprawione (joi)
 * configure dla modu³u sound zbuntuje siê je¿eli libsndfile jest zbyt stare (<1.0) (joi)
+* poprawna instalacja podprogramu dla modu³u arts_sound (tak¿e dla xosd_notify) (joi)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
