--- a/ChangeLog
+++ b/ChangeLog
@@ -406,6 +406,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * przy dodawaniu nowego kontaktu lista nie zawsze siê od¶wie¿a³a - poprawione (joi)
 * configure dla modu³u sound zbuntuje siê je¿eli libsndfile jest zbyt stare (<1.0) (joi)
 * poprawna instalacja podprogramu dla modu³u arts_sound (tak¿e dla xosd_notify) (joi)
+* gdy nie uda siê uruchomiæ arts_connectora kadu siê nie zwiesi (analyzer/joi)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
