--- a/ChangeLog
+++ b/ChangeLog
@@ -407,6 +407,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * configure dla modu³u sound zbuntuje siê je¿eli libsndfile jest zbyt stare (<1.0) (joi)
 * poprawna instalacja podprogramu dla modu³u arts_sound (tak¿e dla xosd_notify) (joi)
 * gdy nie uda siê uruchomiæ arts_connectora kadu siê nie zwiesi (analyzer/joi)
+* dodany modu³ alsa_sound (joi)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
