--- a/ChangeLog
+++ b/ChangeLog
@@ -408,6 +408,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * poprawna instalacja podprogramu dla modu³u arts_sound (tak¿e dla xosd_notify) (joi)
 * gdy nie uda siê uruchomiæ arts_connectora kadu siê nie zwiesi (analyzer/joi)
 * dodany modu³ alsa_sound (joi)
+* usuniête 100% obci±¿enia procesora i segfault w przypadku problemów z sieci± (joi)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
