--- a/ChangeLog
+++ b/ChangeLog
@@ -418,6 +418,10 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * poprawiony import listy kontaktów z serwera (przepisane od nowa parsowanie
   pliku listu - teraz czytamy j± zawsze od lewej do prawej; warto¶ci nowych pól
   s± zachowywane przy imporcie/eksporcie, mimo ¿e nie wykorzystywane) (joi)
+* ³ata miga21 poprawiaj±ca kilka b³êdów w formatowaniu wiadomo¶ci gdy
+  wklejamy obrazek (joi)
+* gdy kto¶ przysy³a nam obrazek wiêkszy ni¿ nasz limit lub gdy obrazek pochodzi od
+  anonima/ignorowanego, to zamiast klepsydry pojawia siê odpowiedni napis (joi)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
