--- a/ChangeLog
+++ b/ChangeLog
@@ -422,6 +422,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   wklejamy obrazek (joi)
 * gdy kto¶ przysy³a nam obrazek wiêkszy ni¿ nasz limit lub gdy obrazek pochodzi od
   anonima/ignorowanego, to zamiast klepsydry pojawia siê odpowiedni napis (joi)
+* usuniêty potencjalny segfault przy aktualizacji informacji o kontakcie (joi)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
