--- a/ChangeLog
+++ b/ChangeLog
@@ -406,7 +406,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * przy dodawaniu nowego kontaktu lista nie zawsze siê od¶wie¿a³a - poprawione (joi)
 * configure dla modu³u sound zbuntuje siê je¿eli libsndfile jest zbyt stare (<1.0) (joi)
 * poprawna instalacja podprogramu dla modu³u arts_sound (tak¿e dla xosd_notify) (joi)
-* gdy nie uda siê uruchomiæ arts_connectora kadu siê nie zwiesi (analyzer/joi)
+* gdy nie uda siê uruchomiæ arts_connectora, kadu siê nie zwiesi (analyzer/joi)
 * dodany modu³ alsa_sound (joi)
 * usuniête 100% obci±¿enia procesora i segfault w przypadku problemów z sieci± (joi)
 * nie pozwalamy siê po³±czyæ z serwerem je¿eli UIN lub has³o nie s± ustawione
@@ -424,6 +424,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   anonima/ignorowanego, to zamiast klepsydry pojawia siê odpowiedni napis (joi)
 * usuniêty potencjalny segfault przy aktualizacji informacji o kontakcie (joi)
 * usuniête 2 wycieki pamiêci: w sound i voice (joi)
+* dsp_sound: kompatybilno¶æ z niektórymi starymi kartami d¼wiêkowymi,
+  poprawki niezainicjowanych zmiennych (joi)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
