--- a/ChangeLog
+++ b/ChangeLog
@@ -426,7 +426,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * usuniête 2 wycieki pamiêci: w sound i voice (joi)
 * dsp_sound: kompatybilno¶æ z niektórymi starymi kartami d¼wiêkowymi,
   poprawki niezainicjowanych zmiennych (joi)
-
+* Dorregaray: poprawiony blad kasowania UIN-a pobranego z serwera GG przy rejestracji podczas 
+  kontynuacji config_wizarda (Ron_K)
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
   gdy tak rzeczywi¶cie jest (joi)
