--- a/ChangeLog
+++ b/ChangeLog
@@ -431,6 +431,9 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * ³ata Dorregaraya: dodano okienko potwierdzaj±ce, ¿e rejestracja przebieg³a
   prawid³owo w config_wizard i UIN zosta³ zapisany (Ron_K)
 * config_wizard: dzia³aj±cy automatyczny import listy kontaktów (joi)
+* po do³±czeniu zaimportowanej listy kadu segfaultowa³o w losowych momentach (joi)
+* po zaimportowaniu listy kontaktów, "poprawnie" wysy³amy listê osób, których
+  statusy chcemy ogl±daæ - obej¶cie b³êdu w serwerze gg (joi)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
