--- a/ChangeLog
+++ b/ChangeLog
@@ -434,6 +434,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * po do³±czeniu zaimportowanej listy kadu segfaultowa³o w losowych momentach (joi)
 * po zaimportowaniu listy kontaktów, "poprawnie" wysy³amy listê osób, których
   statusy chcemy ogl±daæ - obej¶cie b³êdu w serwerze gg (joi)
+* szybsze otwarcie okna po klikniêciu na ikonê dokuj±c± (joi)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
