--- a/ChangeLog
+++ b/ChangeLog
@@ -436,6 +436,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   statusy chcemy ogl±daæ - obej¶cie b³êdu w serwerze gg (joi)
 * szybsze otwarcie okna po klikniêciu na ikonê dokuj±c± (joi)
 * dodana mo¿liwo¶æ ustawienia koloru jakim pisany jest opis na li¶cie kontaktów (joi)
+* optymalizacje: otwarcie i zapis pliku konfiguracyjnego, ekspansja emotikon,
+  wy¶wietlanie opisów pod kontaktami (joi)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
