--- a/ChangeLog
+++ b/ChangeLog
@@ -6,7 +6,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 +++ wersja 0.4.1
 * usuniêty niewielki wyciek pamiêci przy nieudanej próbie za³adowania modu³u (joi)
 * poprawiona kompatybilno¶æ z Qt 3.0 (joi)
-* poprawka budowania libgadu na FreeBSD 4.x (z cvsu EKG) (joi)
+* poprawka wykrywania pthreadów w libgadu na FreeBSD 4.x (z cvsu EKG) (joi)
 * poprawka wykrywania bibliotek na MacOSX (joi)
 
 +++ wersja 0.4.0 (16.04.2005)
