--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,10 @@ lub rozbudowy. Postaæ (x/y) oznacza, ¿e x jest pomys³odawc± lub
 podes³a³ patcha, a zrobi³ to kto¶ oznaczony przez y. Je¶li jest
 w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 
++++ wersja 0.5.0
+* wszystkie pliki uzytkownika w katalogu .kadu zamiast .gg (adrian)
+* modul migration - automatyczna migracja z katalogu .gg do .kadu (adrian)
+
 +++ wersja 0.4.1
 * usuniêty niewielki wyciek pamiêci przy nieudanej próbie za³adowania modu³u (joi)
 * poprawiona kompatybilno¶æ z Qt 3.0 (joi)
