--- a/ChangeLog
+++ b/ChangeLog
@@ -11,6 +11,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * usuniêty wyciek pamiêci w module encryption przy wysy³aniu zaszyfrowanej
   wiadomo¶ci (joi)
 * usuniêty potencjalny segfault w encryption przy zepsutej wiadomo¶ci (joi)
+* dokumentacja klas z pliku misc.h (googie/pawel_p)
 
 +++ wersja 0.4.0 (16.04.2005)
 * patch kida, poprawiaj±cy wygl±d okna zarz±dzania ¶cie¿kami do plików
