--- a/ChangeLog
+++ b/ChangeLog
@@ -30,6 +30,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   od jednego "nadawcy" (OBenY/Vogel/joi)
 * dodanie do "Zarz±dcy modu³ów" kolumny "Wersja", obs³uga pola "Version"
   w plikach .desc modu³ów (FuKu/joi)
+* usuniêty segfault przy zakañczaniu rozmowy g³osowej (joi)
 
 +++ wersja 0.4.0 (16.04.2005)
 * patch kida, poprawiaj±cy wygl±d okna zarz±dzania ¶cie¿kami do plików
