--- a/ChangeLog
+++ b/ChangeLog
@@ -15,6 +15,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * libgadu - Poprawiony b³±d przesy³u du¿ych zdjêæ (EKG-devel/Ron_K)
 * dodany do autodownloadu modu³ screenshot (joi)
 * usuniêty wyciek pamiêci w module speech (joi)
+* usuniêty segfault przy zakañczaniu rozmowy g³osowej (joi)
 
 +++ wersja 0.4.0 (16.04.2005)
 * patch kida, poprawiaj±cy wygl±d okna zarz±dzania ¶cie¿kami do plików
