--- a/ChangeLog
+++ b/ChangeLog
@@ -36,6 +36,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * modu³ migration migruje listê ignorowanych do pliku kadu.conf.xml (adrian)
 * lista ignorowanych jest wczytywana z kadu.conf.xml (adrian)
 * lista ignorowanych zapisywana do kadu.conf.xml - plik ignored ju¿ nie u¿ywany (adrian)
+* modu³ ext_sound od dzisiaj nie da siê za³adowaæ jednocze¶nie z innymi modu³ami
+  d¼wiêkowymi (joi)
 
 +++ wersja 0.4.0 (16.04.2005)
 * patch kida, poprawiaj±cy wygl±d okna zarz±dzania ¶cie¿kami do plików
