--- a/ChangeLog
+++ b/ChangeLog
@@ -38,6 +38,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * lista ignorowanych zapisywana do kadu.conf.xml - plik ignored ju¿ nie u¿ywany (adrian)
 * modu³ ext_sound od dzisiaj nie da siê za³adowaæ jednocze¶nie z innymi modu³ami
   d¼wiêkowymi (joi)
+* poprawka dla proxy w HttpClient (michal)
 
 +++ wersja 0.4.0 (16.04.2005)
 * patch kida, poprawiaj±cy wygl±d okna zarz±dzania ¶cie¿kami do plików
