--- a/ChangeLog
+++ b/ChangeLog
@@ -39,6 +39,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * modu³ ext_sound od dzisiaj nie da siê za³adowaæ jednocze¶nie z innymi modu³ami
   d¼wiêkowymi (joi)
 * poprawka dla proxy w HttpClient (michal)
+* opcja kasowania nadchodz±cych wiadomo¶ci przy usuniêciu dymka z wiadomo¶ci± (serine/joi)
 
 +++ wersja 0.4.0 (16.04.2005)
 * patch kida, poprawiaj±cy wygl±d okna zarz±dzania ¶cie¿kami do plików
