--- a/ChangeLog
+++ b/ChangeLog
@@ -16,6 +16,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * dodany do autodownloadu modu³ screenshot (joi)
 * usuniêty wyciek pamiêci w module speech (joi)
 * usuniêty segfault przy zakañczaniu rozmowy g³osowej (joi)
+* dodany do autodownloadu modu³ osdhints_notify (joi)
 
 +++ wersja 0.4.0 (16.04.2005)
 * patch kida, poprawiaj±cy wygl±d okna zarz±dzania ¶cie¿kami do plików
