--- a/ChangeLog
+++ b/ChangeLog
@@ -43,6 +43,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * dodany do autodownloadu modu³ osdhints_notify (joi)
 * modu³ migration migruje kadu.conf do pliku kadu.conf.xml (adrian)
 * modu³ migration migruje wszystkie pliki konfiguracyjne do pliku kadu.conf.xml (adrian)
+* poprawka segfaulta w module voice gdy karta muzyczna byla zajeta (pawel_p)
 
 +++ wersja 0.4.0 (16.04.2005)
 * patch kida, poprawiaj±cy wygl±d okna zarz±dzania ¶cie¿kami do plików
